--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
+    "stylelint": "^14.15.0",
+    "stylelint-react-native": "^2.4.0",
     "typescript": "^4.8.3"
   },
   "jest": {
