--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-image-picker": "^4.10.1",
     "react-native-pager-view": "^6.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.10.0",
